group 'com.kjipo'
version '0.1.0-SNAPSHOT'

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
    }
}

apply plugin: 'java'
apply plugin: 'kotlin'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile project(":stateHandling")
    compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
    compile "org.slf4j:slf4j-api:${slf4jVersion}"
    compile "org.slf4j:slf4j-simple:${slf4jVersion}"
    compile "no.tornado:tornadofx:${tornadoVersion}"
    testCompile group: 'junit', name: 'junit', version: '4.11'

//    compile group: 'org.openjfx', name: 'javafx.base', version: '11.0.0-ea1', ext: 'pom'
}



//compileJava {
//    options.compilerArgs += ["--add-modules", "java.xml"]
//}
//
//
//compileTestJava {
//    options.compilerArgs += ["--add-modules", "java.xml"]
//}
//
//test {
//    jvmArgs += ["--add-modules", "java.xml"]
//}
